setting this up; not sure i want to keep this

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "exports": {
     ".": "./src/index.ts"
   },
-  "keywords": [],
+  "keywords": ["neo4j", "drivers"],
   "author": "",
   "license": "ISC",
   "devDependencies": {
