--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "test:ci": "vitest run",
+    "lint": "biome lint --apply src/",
+    "lint:check": "biome lint src/",
+    "format": "biome format --write src/",
+    "format:check": "biome format src/"
   },
   "exports": {
     ".": "./src/index.ts"
   },
-  "keywords": [],
+  "keywords": ["neo4j", "drivers"],
   "author": "",
   "license": "ISC",
   "devDependencies": {
